css/photo-grid.css
.photo-grid {
	margin: 1em auto;
	max-width: 1220px;
	text-align: center;
}
 
.photo-grid li {
	border: 5px solid white;
	display: inline-block;
/*	margin: 1em;*/
	width: 370px;
}
 
.photo-grid figure {
	height: 250px;
	overflow: hidden;
	position: relative;
	width: 360px;
    border-radius:10%;
    z-index: 2; /*to hide the corner scaling overflow*/
}
 
.photo-grid li:hover figcaption {
	opacity: 1;
    
    
}
.photo-grid img {
	display: block;
	height: auto;
	-webkit-transition: all 300ms;
	-moz-transition: all 300ms;
	transition: all 300ms;
	max-width: 100%;

}
 
.photo-grid li:hover img {
        overflow: hidden;
	-webkit-transform: scale(1.4);
	-moz-transform: scale(1.4);
	transform: scale(1.4);

}


.photo-grid figcaption p {
	display: table-cell;
	font-size: 1em;
	position: relative;
	top: -40px;
	width: 360px;
	-webkit-transition: all 300ms ease-out;
	-moz-transition: all 300ms ease-out;
	transition: all 300ms ease-out;
	vertical-align: middle;
}
 
.photo-grid li:hover figcaption p {
	-moz-transform: translateY(40px);
	-webkit-transform: translateY(40px);
	transform: translateY(40px);
}
.photo-grid figcaption {
	background: rgba(0,0,5,0.7);
	color: white;
	display: table;
	height: 100%;
	left: 0;
	opacity: 0;
	position: absolute;
	right: 0;
	top: 0;
    overflow: hidden;
    border-radius:10%;
	-webkit-transition: all 300ms;
	-moz-transition: all 300ms;
	transition: all 300ms;
	-webkit-transition-delay: 100ms;
	-moz-transition-delay: 100ms;
	transition-delay: 100ms;
	z-index: 100;
}

.video-grid {
	margin: 1em auto;
	max-width: 1220px;
	text-align: center;
}
 
.video-grid li {
/*	border: 5px solid white;*/
	display: inline-block;
/*	margin: 1em;*/
	width: 360px;

}

#videotag {
    background-color: darkgrey;
    border-radius: 1%;
    padding: inherit;
}
.video-grid div{
   line-height: 20px;
   overflow: hidden;
    padding: 5px;
    word-wrap: break-word;
}
.video-grid p{
    text-align: left; 
    padding: 5px;
}

@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic);

p {
    font-family: "Source Sans Pro", Arial, sans-serif;
}

